tests/paczka1/fuzzy1/54287245.err
Error in line 3: urmArJk A792 76,33
Error in line 2: iAXYt A879 32,1
Error in line 26: A879 A792 29,7
Error in line 29: 8nSK5Zo S369 87,8
